--- a/nodejs-server/package.json
+++ b/nodejs-server/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node index.js"
+        "start": "node ./bin/www",
+        "dev": "nodemon ./bin/www"
     },
     "keywords": [],
     "author": "",
@@ -15,6 +16,7 @@
         "express": "^4.17.1",
         "helmet": "^3.20.0",
         "mongoose": "^5.6.7",
-        "morgan": "^1.9.1"
+        "morgan": "^1.9.1",
+        "nodemon": "^1.19.1"
     }
 }
