--- a/nodejs-server/package.json
+++ b/nodejs-server/package.json
@@ -12,11 +12,18 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "axios": "^0.19.0",
+        "cors": "^2.8.5",
         "dotenv": "^8.0.0",
         "express": "^4.17.1",
+        "express-mongo-sanitize": "^1.3.2",
+        "express-rate-limit": "^5.0.0",
         "helmet": "^3.20.0",
+        "hpp": "^0.2.2",
         "mongoose": "^5.6.7",
         "morgan": "^1.9.1",
-        "nodemon": "^1.19.1"
+        "nodemon": "^1.19.1",
+        "validator": "^11.1.0",
+        "xss-clean": "^0.1.1"
     }
 }
