--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "sb": "cd nodejs-server && npm start && cd ../react-front-end && npm run build && sudo cp -r  ./build/* /usr/share/nginx/html && sudo service nginx restart && cd ~",
-        "install": "cd nodejs-server && npm install && cd ../react-front-end && npm install"
+        "install": "cd nodejs-server && npm install && cd ../react-front-end && npm install",
+        "start": "cd nodejs-server && npm start && cd ../react-front-end && npm start"
     },
     "repository": {
         "type": "git",
