--- a/nodejs-server/package.json
+++ b/nodejs-server/package.json
@@ -14,6 +14,7 @@
     "dependencies": {
         "axios": "^0.19.0",
         "cors": "^2.8.5",
+        "debug": "^4.1.1",
         "dotenv": "^8.0.0",
         "express": "^4.17.1",
         "express-mongo-sanitize": "^1.3.2",
