--- a/nodejs-server/.env
+++ b/nodejs-server/.env
@@ -1,1 +1,2 @@
 MONGO_URL = mongodb+srv://mottrieuangi:mottrieuangi@cluster0-m95ie.mongodb.net/rednit?retryWrites=true&w=majority
+GEO_KEY = 10722481bbd04154a2d7d06e0a96b193
