--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -9,6 +9,7 @@
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "react-swipy": "^0.0.6",
     "styled-components": "^4.3.2"
   },
   "scripts": {
