--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "antd": "^3.20.7",
+    "axios": "^0.19.0",
     "classnames": "^2.2.6",
     "firebase": "^6.3.3",
+    "history": "^4.9.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
