--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && sudo cp -r  ./build/* /usr/share/nginx/html && sudo service nginx restart",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
