--- a/nodejs-server/package.json
+++ b/nodejs-server/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "node ./bin/www",
-        "dev": "nodemon ./bin/www"
+        "dev": "nodemon ./bin/www",
+        "start-pm": "pm2 start ./bin/www.js --name node"
     },
     "keywords": [],
     "author": "",
