--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -8,6 +8,7 @@
     "classnames": "^2.2.6",
     "firebase": "^6.3.3",
     "history": "^4.9.0",
+    "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
