--- a/nodejs-server/package.json
+++ b/nodejs-server/package.json
@@ -13,6 +13,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "aws-sdk": "^2.501.0",
         "axios": "^0.19.0",
         "cors": "^2.8.5",
         "debug": "^4.1.1",
@@ -25,6 +26,7 @@
         "mongoose": "^5.6.7",
         "morgan": "^1.9.1",
         "nodemon": "^1.19.1",
+        "uuid": "^3.3.2",
         "validator": "^11.1.0",
         "xss-clean": "^0.1.1"
     }
