--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -1,44 +1,45 @@
 {
-  "name": "react-front-end",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "antd": "^3.20.7",
-    "axios": "^0.19.0",
-    "classnames": "^2.2.6",
-    "firebase": "^6.3.3",
-    "history": "^4.9.0",
-    "moment": "^2.24.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-redux": "^7.1.0",
-    "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1",
-    "react-swipy": "^0.0.6",
-    "redux": "^4.0.4",
-    "redux-logger": "^3.0.6",
-    "redux-persist": "^5.10.0",
-    "styled-components": "^4.3.2"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build && sudo cp -r  ./build/* /usr/share/nginx/html && sudo service nginx restart",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "name": "react-front-end",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "antd": "^3.20.7",
+        "axios": "^0.19.0",
+        "classnames": "^2.2.6",
+        "firebase": "^6.3.3",
+        "history": "^4.9.0",
+        "moment": "^2.24.0",
+        "react": "^16.8.6",
+        "react-dom": "^16.8.6",
+        "react-redux": "^7.1.0",
+        "react-router-dom": "^5.0.1",
+        "react-scripts": "3.0.1",
+        "react-swipy": "^0.0.6",
+        "redux": "^4.0.4",
+        "redux-logger": "^3.0.6",
+        "redux-persist": "^5.10.0",
+        "styled-components": "^4.3.2"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build && sudo cp -r  ./build/* /usr/share/nginx/html && sudo service nginx restart",
+        "build1": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": "react-app"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    }
 }
